--- a/src/Css/App.css
+++ b/src/Css/App.css
@@ -23,7 +23,7 @@
     U+FEFF, U+FFFD;
 }
 
-h1{
+h1 {
   font-family: "Obitron";
 }
 h2,
@@ -126,6 +126,10 @@ section {
   padding-bottom: 1vw;
 }
 
+/*
+  Logbook
+*/
+
 .logbook {
   min-width: 100%;
 }
@@ -138,13 +142,25 @@ section#articles article:first-child {
   margin-bottom: 0;
 }
 
+details {
+  padding: 0 1rem;
+  border-radius: 6px;
+  background-color: #262626;
+  color: #263238;
+}
+
 section article summary {
-  display:block;
+  padding: 1rem 2em 1rem 0;
+  display: block;
+  position: relative;
+  font-size: 1.33em;
+  font-weight: bold;
   cursor: pointer;
 }
 
 section article ul {
   margin-left: 2em;
+  color: white;
 }
 
 section article header p {
@@ -173,15 +189,15 @@ section header p {
   color: #777;
   text-align: end;
 }
-#articles figure img{
-  width: 70%;
-  height: auto;
+#articles img {
+  width: 100%;
   margin: 1vw;
 }
-#articles figure.Mockup img{
+#articles img.Mockup {
   width: 60%;
 }
 h4 {
+  color: white;
   margin-bottom: 1vw;
 }
 .logImg {
@@ -190,6 +206,7 @@ h4 {
   margin-right: 1vw;
 }
 .clear {
+  padding-bottom: 1vw;
   clear: both;
 }
 aside {
@@ -216,11 +233,17 @@ aside ul {
 aside li {
   padding: 0.6vw;
 }
-
+a:hover {
+  color: rgb(0, 188, 188);
+}
+a:active {
+  color: cyan;
+}
 a {
   text-decoration: none;
   color: cyan;
 }
+
 p {
   color: white;
 }
@@ -246,6 +269,20 @@ p {
   margin: 1em;
   cursor: pointer;
 }
+
+/*
+  Skills
+*/
+
+.skillImg {
+  width: 100%;
+  max-width: fit-content;
+  margin-right: 2vw;
+}
+.skillImg img {
+  width: 100%;
+}
+
 footer {
   display: flex;
   justify-content: center;
